--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -29,8 +29,8 @@ jobs:
         run: npm install
 
       # 运行构建脚本
-#      - name: Build VuePress site
-#        run: npm run docs:build
+      - name: Build VuePress site
+        run: yarn docs:build
 
       # 查看 workflow 的文档来获取更多信息
       # @see https://github.com/crazy-max/ghaction-github-pages
